[MSA-2] Supplier rabbit config. Part 1

--- a/supplier/src/main/resources/application.properties
+++ b/supplier/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+rabbitmq.host=host.docker.internal
+rabbitmq.port=5672
+rabbitmq.user=admin
+rabbitmq.password=admin
+rabbitmq.customerQueue=orderQueue
+rabbitmq.supplierQueue=responseQueue
+rabbitmq.customerExchange=orderExchange
+rabbitmq.supplierExchange=responseExchange
+rabbitmq.customerRoutingKey=customer.key.baz
+rabbitmq.supplierRoutingKey=supplier.key.baz
