--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: "3.8"
 services:
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    ports:
+      - 15672:15672
+      - 5672:5672
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=admin
+
   customer:
     build: ./customer
     container_name: customer
@@ -15,14 +25,3 @@ services:
       - 8880:8080
     depends_on:
       - rabbitmq
-
-  rabbitmq:
-    image: rabbitmq
-    container_name: rabbitmq
-    ports:
-      - 15691:15691
-      - 15692:15692
-      - 25672:25672
-      - 4369:4369
-      - 5671:5671
-      - 5672:5672
