--- a/supplier/build.gradle
+++ b/supplier/build.gradle
@@ -18,12 +18,15 @@ bootJar {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	compile 'org.springframework.boot:spring-boot-starter-actuator'
+	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.boot:spring-boot-starter-amqp'
+	compile 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter:7.14.0'
+	compile 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-rest:7.14.0'
+	compile 'org.camunda.bpm:camunda-engine:7.14.0'
+	compile 'com.h2database:h2'
 
-
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+	testCompile('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 }
