--- a/supplier/src/main/resources/application.properties
+++ b/supplier/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-rabbitmq.host=host.docker.internal
+rabbitmq.host=localhost
 rabbitmq.port=5672
-rabbitmq.user=admin
-rabbitmq.password=admin
+rabbitmq.user=guest
+rabbitmq.password=guest
 rabbitmq.customerQueue=orderQueue
 rabbitmq.supplierQueue=responseQueue
 rabbitmq.customerExchange=orderExchange
 rabbitmq.supplierExchange=responseExchange
 rabbitmq.customerRoutingKey=customer.key.baz
 rabbitmq.supplierRoutingKey=supplier.key.baz
+
+server.port=8080
