--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: "3.8"
 services:
+  camunda:
+    image: camunda/camunda-bpm-platform:latest
+    container_name: camunda
+    ports:
+        - 8888:8080
+
   rabbitmq:
     image: rabbitmq:management
     container_name: rabbitmq
