--- a/customer/build.gradle
+++ b/customer/build.gradle
@@ -29,24 +29,12 @@ dependencies {
 	compile 'org.camunda.bpm:camunda-engine:7.14.0'
 	compile 'com.h2database:h2'
 
-	testCompile('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testCompile 'org.springframework.boot:spring-boot-starter-test:2.4.1'
+	testCompile 'org.camunda.bpm.assert:camunda-bpm-assert:7.0.0'
+	testCompile 'org.camunda.bpm.extension.mockito:camunda-bpm-mockito:4.13.0'
+	testCompile 'junit:junit:4.13'
+
 }
-//dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-//	implementation 'org.springframework.boot:spring-boot-starter-amqp'
-//
-//	implementation group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.14.0'
-//	implementation group: 'org.camunda.connect', name: 'camunda-connect-core', version: '1.5.0'
-//	implementation group: 'org.camunda.connect', name: 'camunda-connect-connectors-all', version: '1.5.0'
-//
-//
-//
-//	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//}
 
 test {
 	useJUnitPlatform()
